--- a/index.html
+++ b/index.html
@@ -10,6 +10,60 @@
 
 <body>
 
+    <nav>
+        <div class="logo">
+            <a href="" target="_blank">Caperucita Roja</a>
+        </div>
+    </nav>
+
+    <div class="text" id="text">
+        <div class="left">
+            <img src="./assets/img/intro.jpeg">
+        </div>
+        <div class="right">
+            <h5>Caperucita Roja</h5>
+            <p>
+                Érase una vez una preciosa niña que siempre llevaba una capa roja con capucha para protegerse del frío.
+                Por eso, todo el mundo la llamaba Caperucita Roja.
+
+                Caperucita vivía en una casita cerca del bosque. Un día, la mamá de Caperucita le dijo:
+            </p>
+            <p>
+                – Hija mía, tu abuelita está enferma. He preparado una cestita con tortas y un tarrito de miel para que
+                se la lleves. ¡Ya verás qué contenta se pone!
+            </p>
+            <p>
+                – ¡Estupendo, mamá! Yo también tengo muchas ganas de ir a visitarla – dijo Caperucita saltando de
+                alegría.
+            </p>
+            <p>
+                Cuando Caperucita se disponía a salir de casa, su mamá, con gesto un poco serio, le hizo una
+                advertencia:
+            </p>
+            <p>
+                – Ten mucho cuidado, cariño. No te entretengas con nada y no hables con extraños. Sabes que en el bosque
+                vive el lobo y es muy peligroso. Si ves que aparece, sigue tu camino sin detenerte.
+            </p>
+            <p>
+                – No te preocupes, mamita – dijo la niña -. Tendré en cuenta todo lo que me dices.
+            </p>
+            <p>
+                – Está bien – contestó la mamá, confiada –. Dame un besito y no tardes en regresar.
+            </p>
+            <p>
+                – Así lo haré, mamá – afirmó de nuevo Caperucita diciendo adiós con su manita mientras se alejaba.
+            </p>
+        </div>
+    </div>
+
+    <footer>
+        <div class="top">
+            <div class="logo">
+                <a href="" target="_blank">Caperucita Roja</a>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
