--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     </nav>
 
     <div class="text" id="text">
+        <h5>Caperucita Roja</h5>
         <div class="left">
             <img src="./assets/img/intro.jpeg">
         </div>
         <div class="right">
-            <h5>Caperucita Roja</h5>
             <p>
                 Érase una vez una preciosa niña que siempre llevaba una capa roja con capucha para protegerse del frío.
                 Por eso, todo el mundo la llamaba Caperucita Roja.
@@ -52,6 +52,33 @@
             </p>
             <p>
                 – Así lo haré, mamá – afirmó de nuevo Caperucita diciendo adiós con su manita mientras se alejaba.
+            </p>
+        </div>
+    </div>
+
+    <div class="text" id="text">
+        <div class="left">
+            <img src="./assets/img/chapter-1.jpeg">
+        </div>
+        <div class="right">
+            <p>
+                Cuando llegó al bosque, la pequeña comenzó a distraerse contemplando los pajaritos y recogiendo flores.
+                No se dio cuenta de que alguien la observaba detrás de un viejo y frondoso árbol. De repente, oyó una
+                voz dulce y zalamera.
+            </p>
+            <p>
+                – ¿A dónde vas, Caperucita?
+            </p>
+            <p>
+                La niña, dando un respingo, se giró y vio que quien le hablaba era un enorme lobo.
+            </p>
+            <p>
+                – Voy a casa de mi abuelita, al otro lado del bosque. Está enferma y le llevo una deliciosa merienda y
+                unas flores para alegrarle el día.
+            </p>
+            <p>
+                – ¡Oh, eso es estupendo! – dijo el astuto lobo -. Yo también vivo por allí. Te echo una carrera a ver
+                quién llega antes. Cada uno iremos por un camino diferente. ¿Te parece bien?
             </p>
         </div>
     </div>
