agregado chapter-2, donde el lobo llega antes a la casa de la abuelita y se la come y cuando llega caperucita la manda a pasar, agregada la imagen chapter-2.jpeg

--- a/index.html
+++ b/index.html
@@ -83,6 +83,43 @@
         </div>
     </div>
 
+    <div class="text" id="text">
+        <div class="left">
+            <img src="./assets/img/chapter-2.jpeg">
+        </div>
+        <div class="right">
+            <p>
+                La inocente niña pensó que era una idea divertida y asintió con la cabeza. No sabía que el lobo había
+                elegido el camino más corto para llegar primero a su destino. Cuando el animal llegó a casa de la
+                abuela, llamó a la puerta.
+            </p>
+            <p>
+                – ¿Quién es? – gritó la mujer.
+            </p>
+            <p>
+                – Soy yo, abuelita, tu querida nieta Caperucita. Ábreme la puerta – dijo el lobo imitando la voz de la
+                niña.
+            </p>
+            <p>
+                – Pasa, querida mía. La puerta está abierta – contestó la abuela.
+            </p>
+            <p>
+                El malvado lobo entró en la casa y sin pensárselo dos veces, saltó sobre la cama y se comió a la
+                anciana. Después, se puso su camisón y su gorrito de dormir y se metió entre las sábanas esperando a que
+                llegara la niña. Al rato, se oyeron unos golpes.
+            </p>
+            <p>
+                – ¿Quién llama? – dijo el lobo forzando la voz como si fuera la abuelita.
+            </p>
+            <p>
+                – Soy yo, Caperucita. Vengo a hacerte una visita y a traerte unos ricos dulces para merendar.
+            </p>
+            <p>
+                – Pasa, querida, estoy deseando abrazarte – dijo el lobo malvado relamiéndose.
+            </p>
+        </div>
+    </div>
+
     <footer>
         <div class="top">
             <div class="logo">
