agregado chapter-3 donde el lobo engaña a caperucita con el disfraz de abuelita y se la come, agregada la imagen chapter-3.jpeg

--- a/index.html
+++ b/index.html
@@ -120,6 +120,36 @@
         </div>
     </div>
 
+    <div class="text" id="text">
+        <div class="left">
+            <img src="./assets/img/chapter-3.jpeg">
+        </div>
+        <div class="right">
+            <p>
+                La habitación estaba en penumbra. Cuando se acercó a la cama, a Caperucita le pareció que su abuela
+                estaba muy cambiada. Extrañada, le dijo:
+            </p>
+            <p>
+                – Abuelita, abuelita ¡qué ojos tan grandes tienes!
+            </p>
+            <p>
+                – Son para verte mejor, preciosa mía – contestó el lobo, suavizando la voz.
+            </p>
+            <p>
+                – Abuelita, abuelita ¡qué orejas tan grandes tienes!
+            </p>
+            <p>
+                – Son para oírte mejor, querida.
+            </p>
+            <p>
+                – Pero… abuelita, abuelita ¡qué boca tan grande tienes!
+            </p>
+            <p>
+                – ¡Es para comerte mejor! – gritó el lobo dando un enorme salto y comiéndose a la niña de un bocado.
+            </p>
+        </div>
+    </div>
+
     <footer>
         <div class="top">
             <div class="logo">
