agregado chapter-4 donde el lobo se queda profundamente dormido despues de comerce a caperucita y el leñador lo encuentra le abre la barriga y rescata a las mujeres y lo espanta del bosque, agregada la imagen chapter-4.jpeg

--- a/index.html
+++ b/index.html
@@ -150,6 +150,35 @@
         </div>
     </div>
 
+    <div class="text" id="text">
+        <div class="left">
+            <img src="./assets/img/chapter-4.jpeg">
+        </div>
+        <div class="right">
+            <p>
+                Con la barriga llena después de tanta comida, al lobo le entró sueño. Salió de la casa, se tumbó en el
+                jardín y cayó profundamente dormido. El fuerte sonido de sus ronquidos llamó la atención de un cazador
+                que pasaba por allí. El hombre se acercó y vio que el animal tenía la panza muy hinchada, demasiado para
+                ser un lobo. Sospechando que pasaba algo extraño, cogió un cuchillo y le rajó la tripa. ¡Se llevó una
+                gran sorpresa cuando vio que de ella salieron sanas y salvas la abuela y la niña!
+            </p>
+            <p>
+                Después de liberarlas, el cazador cosió la barriga del lobo y esperaron un rato a que el animal se
+                despertara. Cuando por fin abrió los ojos, vio como los tres le rodeaban y escuchó la profunda y
+                amenazante voz del cazador que le gritaba enfurecido:
+
+            </p>
+            <p>
+                – ¡Lárgate, lobo malvado! ¡No te queremos en este bosque! ¡Como vuelva a verte por aquí, no volverás a
+                contarlo!
+
+            </p>
+            <p>
+                El lobo, aterrado, puso pies en polvorosa y salió despavorido.
+            </p>
+        </div>
+    </div>
+
     <footer>
         <div class="top">
             <div class="logo">
