agregado fin donde todos son felices y selebran la retirada del lobo, agregada imagen fin.jpeg

--- a/index.html
+++ b/index.html
@@ -179,10 +179,24 @@
         </div>
     </div>
 
+    <div class="text" id="text">
+        <div class="left">
+            <img src="./assets/img/fin.jpeg">
+        </div>
+        <div class="right">
+            <p>
+                Caperucita y su abuelita, con lágrimas cayendo sobre sus mejillas, se abrazaron. El susto había pasado y
+                la niña había aprendido una importante lección: nunca más desobedecería a su mamá ni se fiaría de
+                extraños.
+            </p>
+        </div>
+        <h5>Fin</h5>
+    </div>
+
     <footer>
         <div class="top">
             <div class="logo">
-                <a href="" target="_blank">Caperucita Roja</a>
+                <a href="" target="_blank"></a>
             </div>
         </div>
     </footer>
