agregado correcciones a css style.css, agregada imagen del logo logo.jpeg

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
     <nav>
         <div class="logo">
+            <img src="./assets/img/logo.jpeg">
             <a href="" target="_blank">Caperucita Roja</a>
         </div>
     </nav>
 
     <div class="text" id="text">
-        <h5>Caperucita Roja</h5>
         <div class="left">
+            <h5>Caperucita Roja</h5>
             <img src="./assets/img/intro.jpeg">
         </div>
         <div class="right">
@@ -190,6 +191,9 @@
                 extraños.
             </p>
         </div>
+    </div>
+
+    <div class="text" id="text">
         <h5>Fin</h5>
     </div>
 
